# wechat

./: README.md  requirements.txt  run.py  setup.cfg  setup.py  test.py
wechat/cmd/: __init__.py  wechat.py
wechat/content/: __init__.py  hitokoto.py  iciba.py
wechat/wx/: cron.py  send.py  wind.py
