[metadata]
name = wechat
summary = wx auto chat
description-file =
    README.md
license = Apache License, Version 2.0
author = zwei
author-email = suifeng10078@gmail.com
home-page = https://www.flftuu.com

[files]
packages =
    wechat

[entry_points]
console_scripts =
    webchat = webchat.cmd.webchat:main

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
